# platform.core.system.haptic-module-tizen

./: AUTHORS  CMakeLists.txt  LICENSE.APLv2  NOTICE  project.config
include/: haptic_file.h  haptic_module_log.h
packaging/: haptic-module-tizen.spec
test/: test.c
tizen/DEVICE/: CMakeLists.txt
tizen/DEVICE/include/: file.h
tizen/DEVICE/src/: file.c  haptic.c  haptic_module_file.c  haptic_module_internal.c  sysnoti.c
tizen/SIMULATOR/: CMakeLists.txt
tizen/SIMULATOR/src/: haptic.c  haptic_module_internal.c
