CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(SRCS
	src/haptic_module_internal.c
	src/file.c
	src/sysnoti.c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(DEPENDENTS "dlog vconf haptic-plugin device-node")

INCLUDE(FindPkgConfig)
pkg_check_modules(rpkgs REQUIRED ${DEPENDENTS})

FOREACH(flag ${rpkgs_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -fno-omit-frame-pointer")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,--no-as-needed")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DENABLE_DLOG_OUT -DSLP_DEBUG")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${rpkgs_LDFLAGS})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
